@@ -11,7 +11,6 @@ import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.animal.Animal;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.storage.loot.LootTable;
 import org.jetbrains.annotations.NotNull;
 
@@ -95,17 +94,12 @@ public class AnimalHerdingModule extends AbstractBuildingModule
     @NotNull
     public List<IGenericRecipe> getRecipesForDisplayPurposesOnly(@NotNull final Animal animal)
     {
-        return Collections.singletonList(new GenericRecipe(BuiltInRegistries.ENTITY_TYPE.getKey(animal.getType()),
-                ItemStack.EMPTY,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                Collections.singletonList(getBreedingItems()),
-                0,
-                Blocks.AIR,
-                animal.getLootTable(),
-                ModEquipmentTypes.axe.get(),
-                animal.getType(),
-                Collections.emptyList(),
-                0));
+        return List.of(GenericRecipe.builder()
+                .withRecipeId(BuiltInRegistries.ENTITY_TYPE.getKey(animal.getType()))
+                .withInputs(List.of(getBreedingItems()))
+                .withLootTable(animal.getLootTable())
+                .withRequiredTool(ModEquipmentTypes.axe.get())
+                .withRequiredEntity(animal.getType())
+                .build());
     }
 }
